--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.2.0",
     "react-katex": "^2.0.2",
     "react-quill": "^1.3.5",
+    "react-table": "^7.7.0",
     "styled-components": "^5.3.1",
     "suneditor": "^2.41.3",
     "suneditor-react": "^3.3.0",
@@ -43,6 +44,7 @@
     "@types/dompurify": "^2.2.3",
     "@types/react": "17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@types/react-table": "^7.7.5",
     "@types/styled-components": "^5.1.14",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
