--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
+    "@react-page/editor": "^4.1.0",
+    "@react-page/plugins-image": "^4.1.0",
+    "@react-page/plugins-slate": "^4.1.0",
     "@supabase/supabase-js": "^1.22.3",
     "@types/draft-js": "^0.11.5",
     "@types/katex": "^0.11.1",
@@ -25,8 +31,8 @@
     "html-react-parser": "^1.3.0",
     "katex": "^0.13.18",
     "next": "11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.16.1",
