--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/katex": "^0.11.1",
     "@types/react-draft-wysiwyg": "^1.13.3",
     "@types/react-helmet": "^6.1.2",
+    "@types/react-icons": "^3.0.0",
     "dompurify": "^2.3.3",
     "formik": "^2.2.9",
     "framer-motion": "^4",
@@ -42,7 +43,7 @@
     "@types/react": "17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-table": "^7.7.5",
-    "@types/styled-components": "^5.1.14",
+    "@types/styled-components": "^5.1.15",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "4.4.2"
