--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^4",
     "html-react-parser": "^1.3.0",
     "katex": "^0.13.18",
+    "lodash": "^4.17.21",
     "next": "11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
