--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-helmet": "^6.1.2",
     "@types/react-icons": "^3.0.0",
     "dompurify": "^2.3.3",
+    "eslint-plugin-react-hooks": "^4.2.1-rc.0-next-aa8f2bdbc-20211215",
     "formik": "^2.2.9",
     "framer-motion": "^4",
     "html-react-parser": "^1.3.0",
