--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.16.1",
     "react-icons": "^4.3.1",
