--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-draft-wysiwyg": "^1.13.3",
     "@types/react-helmet": "^6.1.2",
     "@types/react-icons": "^3.0.0",
+    "copy-to-clipboard": "^3.3.1",
     "dompurify": "^2.3.3",
     "eslint-plugin-react-hooks": "^4.2.1-rc.0-next-aa8f2bdbc-20211215",
     "formik": "^2.2.9",
@@ -28,6 +29,7 @@
     "next": "11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.16.1",
@@ -39,6 +41,7 @@
     "suneditor": "^2.41.3",
     "suneditor-react": "^3.3.1",
     "swr": "^1.1.2",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.11"
   },
   "devDependencies": {
@@ -47,6 +50,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-table": "^7.7.5",
     "@types/styled-components": "^5.1.15",
+    "@types/uuid": "^8.3.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "4.4.2"
