--- a/package.json
+++ b/package.json
@@ -9,50 +9,49 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.15",
-    "@chakra-ui/react": "^1.7.3",
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@supabase/supabase-js": "^1.29.1",
     "@types/katex": "^0.11.1",
-    "@types/react-draft-wysiwyg": "^1.13.3",
-    "@types/react-helmet": "^6.1.2",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-icons": "^3.0.0",
     "copy-to-clipboard": "^3.3.1",
-    "dompurify": "^2.3.3",
-    "eslint-plugin-react-hooks": "^4.2.1-rc.0-next-aa8f2bdbc-20211215",
+    "dompurify": "^2.3.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "formik": "^2.2.9",
     "framer-motion": "^5",
-    "html-react-parser": "^1.3.0",
-    "katex": "^0.13.18",
+    "html-react-parser": "^1.4.5",
+    "katex": "^0.15.2",
     "lodash": "^4.17.21",
-    "next": "11.1.0",
+    "next": "12.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-dropzone": "^11.4.2",
+    "react-dropzone": "^11.5.1",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.16.1",
+    "react-hook-form": "^7.23.0",
     "react-icons": "^4.3.1",
     "react-katex": "^2.0.2",
     "react-quill": "^1.3.5",
     "react-table": "^7.7.0",
-    "styled-components": "^5.3.1",
+    "styled-components": "^5.3.3",
     "suneditor": "^2.41.3",
     "suneditor-react": "^3.3.1",
     "swr": "^1.1.2",
     "uuid": "^8.3.2",
-    "yarn": "^1.22.11"
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
-    "@types/dompurify": "^2.2.3",
-    "@types/react": "17.0.19",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-table": "^7.7.5",
-    "@types/styled-components": "^5.1.15",
-    "@types/uuid": "^8.3.3",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "typescript": "4.4.2"
+    "@types/dompurify": "^2.3.3",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-table": "^7.7.9",
+    "@types/styled-components": "^5.1.20",
+    "@types/uuid": "^8.3.4",
+    "eslint": "8.6.0",
+    "eslint-config-next": "12.0.8",
+    "typescript": "4.5.4"
   }
 }
