--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,//i change it from true
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
