--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
     "react-ga": "^3.3.0",
+    "react-ga4": "^1.4.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.23.0",
     "react-icons": "^4.3.1",
@@ -41,12 +42,12 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@supabase/supabase-js": "^1.29.1",
-    "@types/katex": "^0.11.1",
-    "@types/react-helmet": "^6.1.5",
-    "@types/react-icons": "^3.0.0",
     "@types/dompurify": "^2.3.3",
+    "@types/katex": "^0.11.1",
     "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-icons": "^3.0.0",
     "@types/react-table": "^7.7.9",
     "@types/styled-components": "^5.1.20",
     "@types/uuid": "^8.3.4",
@@ -55,5 +56,3 @@
     "typescript": "4.5.4"
   }
 }
-
-
