--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^4.3.1",
     "react-katex": "^2.0.2",
     "react-quill": "^1.3.5",
+    "react-sticky-el": "^2.0.9",
     "react-table": "^7.7.0",
     "styled-components": "^5.3.3",
     "suneditor": "^2.42.0",
@@ -52,6 +53,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.5",
     "@types/react-icons": "^3.0.0",
+    "@types/react-sticky-el": "^1.0.3",
     "@types/react-table": "^7.7.9",
     "@types/styled-components": "^5.1.23",
     "@types/uuid": "^8.3.4",
