--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "@types/uuid": "^8.3.4",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
-    "typescript": "4.5.4"
+    "typescript": "^4.7.2"
   }
 }
