--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@chakra-ui/theme-tools": "^1.3.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@supabase/supabase-js": "^1.30.2",
+    "@supabase/supabase-js": "1.30.2",
+    "@types/formidable": "^2.0.5",
     "copy-to-clipboard": "^3.3.1",
     "dompurify": "^2.3.5",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "formidable": "v3",
     "formik": "^2.2.9",
     "framer-motion": "^5.6.0",
+    "fs": "^0.0.1-security",
     "html-react-parser": "^1.4.8",
     "katex": "^0.15.2",
     "lodash": "^4.17.21",
