--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@chakra-ui/theme-tools": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@supabase/auth-helpers-nextjs": "^0.2.0",
+    "@supabase/auth-helpers-react": "^0.2.0",
     "@supabase/supabase-js": "1.35.2",
+    "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
     "copy-to-clipboard": "^3.3.1",
     "dompurify": "^2.3.8",
