--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "katex": "^0.16.0",
     "lodash": "^4.17.21",
     "next": "^12.1.6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-dropzone": "^14.2.1",
     "react-ga": "^3.3.0",
     "react-ga4": "^1.4.1",
