--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "react-icons": "^4.4.0",
     "react-katex": "^2.0.2",
     "react-quill": "^1.3.5",
+    "react-simple-image-slider": "^2.4.1",
     "react-sticky-el": "^2.0.9",
     "react-table": "^7.8.0",
     "styled-components": "^5.3.5",
     "suneditor": "^2.43.9",
     "suneditor-react": "^3.4.0",
     "swr": "^1.3.0",
-    "typewriter-effect": "^2.18.2",
     "uuid": "^8.3.2",
     "yarn": "^1.22.19"
   },
