--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "katex": "^0.16.0",
     "lodash": "^4.17.21",
     "next": "^12.1.6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
     "react-ga": "^3.3.0",
     "react-ga4": "^1.4.1",
@@ -46,7 +46,7 @@
     "react-sticky-el": "^2.0.9",
     "react-table": "^7.8.0",
     "styled-components": "^5.3.5",
-    "suneditor": "^2.43.9",
+    "suneditor": "2.43.6",
     "suneditor-react": "^3.4.0",
     "swr": "^1.3.0",
     "uuid": "^8.3.2",
@@ -56,7 +56,7 @@
     "@chakra-ui/cli": "^2.1.0",
     "@types/dompurify": "^2.3.3",
     "@types/katex": "^0.14.0",
-    "@types/react": "18.0.12",
+    "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/react-helmet": "^6.1.5",
     "@types/react-icons": "^3.0.0",
