--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react-sticky-el": "^2.0.9",
     "react-table": "^7.8.0",
     "styled-components": "^5.3.5",
-    "suneditor": "2.43.6",
+    "suneditor": "^2.43.9",
     "suneditor-react": "^3.4.0",
     "swr": "^1.3.0",
     "uuid": "^8.3.2",
