--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,20 @@
+// {
+//   "extends": "next/core-web-vitals",
+//   "rules": {
+//     "react/display-name": "off",
+//     "react-hooks/exhaustive-deps": "warn" // <--- THIS IS THE NEW RULE
+//   }
+// }
+
+// added on 25 jun 22 because useeffect dependency array not working
 {
-  "extends": "next/core-web-vitals",
+  "plugins": [
+    // ...
+    "react-hooks"
+  ],
   "rules": {
-    "react/display-name": "off",
-    "react-hooks/exhaustive-deps": "warn" // <--- THIS IS THE NEW RULE
+    // ...
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
