--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@types/formidable": "^2.0.5",
     "copy-to-clipboard": "^3.3.1",
     "dompurify": "^2.3.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "formidable": "v3",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.11",
@@ -64,7 +63,7 @@
     "@types/react-table": "^7.7.12",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
-    "eslint": "8.17.0",
+    "eslint": "^8.18.0",
     "eslint-config-next": "12.1.6",
     "typescript": "^4.7.3"
   }
