--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "gen:theme-typings": "chakra-cli tokens theme/theme.ts",
-    "postinstall": "npm run gen:theme-typings"
+    "postinstall": "npm run gen:theme-typings",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@chakra-ui/cli": "^2.1.2",
+    "@next/bundle-analyzer": "^12.2.5",
     "@types/dompurify": "^2.3.3",
     "@types/katex": "^0.14.0",
     "@types/react": "^18.0.14",
@@ -64,6 +66,7 @@
     "@types/react-table": "^7.7.12",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
+    "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
     "eslint-config-next": "12.1.6",
     "typescript": "^4.7.3"
