--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.9",
-    "@chakra-ui/react": "^2.3.2",
+    "@chakra-ui/react": "^2.3.4",
     "@chakra-ui/theme-tools": "^2.0.11",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@supabase/auth-helpers-nextjs": "^0.2.0",
-    "@supabase/auth-helpers-react": "^0.2.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@supabase/auth-helpers-nextjs": "0.2.0",
+    "@supabase/auth-helpers-react": "0.2.0",
     "@supabase/supabase-js": "1.35.2",
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
@@ -26,7 +26,7 @@
     "dompurify": "^2.3.8",
     "formidable": "v3",
     "formik": "^2.2.9",
-    "framer-motion": "^6",
+    "framer-motion": "^7.4.0",
     "fs": "^0.0.1-security",
     "html-react-parser": "^1.4.14",
     "isomorphic-dompurify": "^0.22.0",
