--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@emotion/styled": "^11",
     "@supabase/auth-helpers-nextjs": "0.2.0",
     "@supabase/auth-helpers-react": "0.2.0",
-    "@supabase/supabase-js": "^2.0.0-rc.10",
+    "@supabase/supabase-js": "2.0.0-rc.10",
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
     "copy-to-clipboard": "^3.3.1",
