--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,9 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react/display-name": "off",
-    "react-hooks/exhaustive-deps": "warn" // <--- THIS IS THE NEW RULE
+    "react-hooks/exhaustive-deps": "warn", // <--- THIS IS THE NEW RULE
+    "react/no-unescaped-entities": "warn",
+    "@next/next/no-page-custom-font": "on"
   }
 }
 
