--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
     "cross-env": "^7.0.3",
-    "eslint": "^8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "^8.24.0",
+    "eslint-config-next": "^12.3.1",
     "typescript": "^4.7.3"
   }
 }
