--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "react/display-name": "off",
     "react-hooks/exhaustive-deps": "warn", // <--- THIS IS THE NEW RULE
     "react/no-unescaped-entities": "warn",
-    "@next/next/no-page-custom-font": "on"
+    "@next/next/no-page-custom-font": "warn"
   }
 }
 
