--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@chakra-ui/theme-tools": "^2.0.11",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@supabase/auth-helpers-nextjs": "0.2.0",
-    "@supabase/auth-helpers-react": "0.2.0",
+    "@supabase/auth-helpers-nextjs": "^0.4.0-next.3",
+    "@supabase/auth-helpers-react": "^0.3.0-next.2",
     "@supabase/supabase-js": "^2.0.0-rc.10",
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
