--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@chakra-ui/theme-tools": "^2.0.11",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@supabase/auth-helpers-nextjs": "0.2.0",
-    "@supabase/auth-helpers-react": "0.2.0",
-    "@supabase/supabase-js": "1.35.2",
+    "@supabase/auth-helpers-nextjs": "^0.2.9",
+    "@supabase/auth-helpers-react": "^0.2.4",
+    "@supabase/supabase-js": "^1.35.7",
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
     "copy-to-clipboard": "^3.3.1",
