--- a/package.json
+++ b/package.json
@@ -7,30 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen:theme-typings": "chakra-cli tokens theme/theme.ts",
+    "gen:theme-typings": "chakra-cli tokens theme/theme.tsx",
     "postinstall": "npm run gen:theme-typings",
     "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.9",
-<<<<<<< HEAD
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@supabase/auth-helpers-nextjs": "^0.4.0-next.3",
-    "@supabase/auth-helpers-react": "^0.3.0-next.2",
-    "@supabase/supabase-js": "^2.0.0-rc.10",
-=======
-    "@chakra-ui/react": "^2.3.4",
-    "@chakra-ui/theme-tools": "^2.0.11",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@supabase/auth-helpers-nextjs": "^0.2.9",
-    "@supabase/auth-helpers-react": "^0.2.4",
-    "@supabase/supabase-js": "^1.35.7",
->>>>>>> master
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
+    "auth-helper-nextjs-latest": "npm:@supabase/auth-helpers-nextjs@next",
+    "auth-helper-react-latest": "npm:@supabase/auth-helpers-react@next",
     "copy-to-clipboard": "^3.3.1",
     "dompurify": "^2.3.8",
     "formidable": "v3",
@@ -57,6 +46,7 @@
     "styled-components": "^5.3.5",
     "suneditor": "^2.43.14",
     "suneditor-react": "^3.4.1",
+    "supbaselatest": "npm:@supabase/supabase-js@rc",
     "swr": "^1.3.0",
     "usehooks-ts": "^2.6.0",
     "uuid": "^8.3.2",
