--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@supabase/auth-helpers-nextjs": "^0.2.9",
+    "@supabase/auth-helpers-react": "^0.2.4",
+    "@supabase/supabase-js": "^1.35.7",
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
-    "auth-helper-nextjs-latest": "npm:@supabase/auth-helpers-nextjs@next",
-    "auth-helper-react-latest": "npm:@supabase/auth-helpers-react@next",
     "copy-to-clipboard": "^3.3.1",
     "dompurify": "^2.3.8",
     "formidable": "v3",
@@ -46,7 +47,6 @@
     "styled-components": "^5.3.5",
     "suneditor": "^2.43.14",
     "suneditor-react": "^3.4.1",
-    "supbaselatest": "npm:@supabase/supabase-js@rc",
     "swr": "^1.3.0",
     "usehooks-ts": "^2.6.0",
     "uuid": "^8.3.2",
