--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@supabase/auth-helpers-nextjs": "^0.2.9",
-    "@supabase/auth-helpers-react": "^0.2.4",
-    "@supabase/supabase-js": "^1.35.7",
+    "@supabase/auth-helpers-nextjs": "^0.4.0-next.3",
+    "@supabase/auth-helpers-react": "^0.3.0-next.2",
+    "@supabase/supabase-js": "^2.0.0-rc.12",
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
     "copy-to-clipboard": "^3.3.1",
