--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@supabase/auth-helpers-nextjs": "^0.4.0-next.3",
-    "@supabase/auth-helpers-react": "^0.3.0-next.2",
-    "@supabase/supabase-js": "^2.0.0-rc.12",
+    "@prisma/client": "^4.4.0",
+    "@supabase/auth-helpers-nextjs": "^0.4.0",
+    "@supabase/auth-helpers-react": "^0.3.0",
+    "@supabase/supabase-js": "^2.0.0",
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
     "copy-to-clipboard": "^3.3.1",
@@ -32,6 +33,7 @@
     "katex": "^0.16.0",
     "lodash": "^4.17.21",
     "next": "^12.1.6",
+    "prisma": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
