--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.0.0",
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
+    "axios": "^1.1.3",
     "copy-to-clipboard": "^3.3.1",
     "dompurify": "^2.3.8",
     "formidable": "v3",
