--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,9 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react/display-name": "off",
-    "react-hooks/exhaustive-deps": "warn" // <--- THIS IS THE NEW RULE
+    "react-hooks/exhaustive-deps": "warn", // <--- THIS IS THE NEW RULE
+    "react-hooks/rules-of-hooks": "error" // Checks rules of Hooks
+   
   }
 }
 
