--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.1.3",
     "copy-to-clipboard": "^3.3.1",
     "dompurify": "^2.3.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "formidable": "v3",
     "formik": "^2.2.9",
     "framer-motion": "^7.4.0",
