--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres:dJxMfHnZf6jy1zCW@db.hbvffqslxssdbkdxfqop.supabase.co:6543/postgres?pgbouncer=true&connection_limit=1"
+DATABASE_URL="postgres://postgres:dJxMfHnZf6jy1zCW@db.hbvffqslxssdbkdxfqop.supabase.co:6543/postgres"
 
 NODE_ENV = "development"
