--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@
 
 DATABASE_URL="postgres://postgres:dJxMfHnZf6jy1zCW@db.hbvffqslxssdbkdxfqop.supabase.co:6543/postgres?pgbouncer=true&connection_limit=1"
 
-NODE_ENV = "development"
-# NODE_ENV = "production"
+# NODE_ENV = "development"
+NODE_ENV = "production"
