--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/supabase-js": "^2.0.0",
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
+    "@vercel/analytics": "^0.1.6",
     "axios": "^1.1.3",
     "copy-to-clipboard": "^3.3.1",
     "dompurify": "^2.3.8",
