--- a/package.json
+++ b/package.json
@@ -13,67 +13,67 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
-    "@chakra-ui/icons": "^2.0.9",
-    "@chakra-ui/react": "^2.3.2",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@prisma/client": "^4.4.0",
-    "@supabase/auth-helpers-nextjs": "^0.4.0",
-    "@supabase/auth-helpers-react": "^0.3.0",
-    "@supabase/supabase-js": "^2.0.0",
+    "@chakra-ui/icons": "^2.0.14",
+    "@chakra-ui/react": "^2.4.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@prisma/client": "^4.7.1",
+    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/supabase-js": "^2.2.1",
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
     "@vercel/analytics": "^0.1.6",
-    "axios": "^1.1.3",
-    "copy-to-clipboard": "^3.3.1",
-    "dompurify": "^2.3.8",
+    "axios": "^1.2.1",
+    "copy-to-clipboard": "^3.3.3",
+    "dompurify": "^2.4.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "formidable": "v3",
+    "formidable": "2.1.1",
     "formik": "^2.2.9",
-    "framer-motion": "^7.4.0",
+    "framer-motion": "^7.10.3",
     "fs": "^0.0.1-security",
-    "html-react-parser": "^1.4.14",
-    "isomorphic-dompurify": "^0.22.0",
-    "katex": "^0.16.0",
+    "html-react-parser": "^3.0.4",
+    "isomorphic-dompurify": "^0.24.0",
+    "katex": "^0.16.4",
     "lodash": "^4.17.21",
-    "next": "^12.1.6",
-    "prisma": "^4.4.0",
+    "next": "^13.0.7",
+    "prisma": "^4.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.1",
-    "react-ga": "^3.3.0",
+    "react-dropzone": "^14.2.3",
+    "react-ga": "^3.3.1",
     "react-ga4": "^1.4.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.32.0",
-    "react-icons": "^4.4.0",
-    "react-katex": "^2.0.2",
+    "react-hook-form": "^7.41.0",
+    "react-icons": "^4.7.1",
+    "react-katex": "^3.0.1",
     "react-simple-image-slider": "^2.4.1",
     "react-sticky-el": "^2.0.9",
     "react-table": "^7.8.0",
-    "styled-components": "^5.3.5",
-    "suneditor": "^2.43.14",
+    "styled-components": "^5.3.6",
+    "suneditor": "^2.44.3",
     "suneditor-react": "^3.4.1",
-    "swr": "^1.3.0",
-    "usehooks-ts": "^2.6.0",
-    "uuid": "^8.3.2",
+    "swr": "^2.0.0",
+    "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@chakra-ui/cli": "^2.1.7",
-    "@next/bundle-analyzer": "^12.2.5",
-    "@types/dompurify": "^2.3.3",
+    "@chakra-ui/cli": "^2.2.1",
+    "@next/bundle-analyzer": "^13.0.7",
+    "@types/dompurify": "^2.4.0",
     "@types/katex": "^0.14.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-helmet": "^6.1.5",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-icons": "^3.0.0",
     "@types/react-sticky-el": "^1.0.3",
     "@types/react-table": "^7.7.12",
-    "@types/styled-components": "^5.1.25",
-    "@types/uuid": "^8.3.4",
+    "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.24.0",
-    "eslint-config-next": "^12.3.1",
+    "eslint": "^8.30.0",
+    "eslint-config-next": "^13.0.7",
     "typescript": "^4.9.4"
   }
 }
