--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-react-parser": "^1.4.14",
     "isomorphic-dompurify": "^0.22.0",
     "katex": "^0.16.0",
+    "latest": "^0.2.0",
     "lodash": "^4.17.21",
     "next": "^12.1.6",
     "prisma": "^4.4.0",
@@ -55,8 +56,7 @@
     "suneditor-react": "^3.4.1",
     "swr": "^1.3.0",
     "usehooks-ts": "^2.6.0",
-    "uuid": "^8.3.2",
-    "yarn": "^1.22.19"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^2.1.7",
