--- a/package.json
+++ b/package.json
@@ -13,67 +13,67 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
-    "@chakra-ui/icons": "^2.0.14",
-    "@chakra-ui/react": "^2.4.4",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@prisma/client": "^4.7.1",
-    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@chakra-ui/icons": "^2.0.18",
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@prisma/client": "^4.13.0",
+    "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/supabase-js": "^2.2.1",
+    "@supabase/supabase-js": "^2.21.0",
     "@supabase/ui": "^0.36.5",
     "@types/formidable": "^2.0.5",
-    "@vercel/analytics": "^0.1.6",
-    "axios": "^1.2.1",
+    "@vercel/analytics": "^0.1.11",
+    "axios": "^1.3.5",
     "copy-to-clipboard": "^3.3.3",
-    "dompurify": "^2.4.1",
+    "dompurify": "^3.0.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "formidable": "2.1.1",
+    "formidable": "^2.1.1",
     "formik": "^2.2.9",
-    "framer-motion": "^7.10.3",
+    "framer-motion": "^10.12.4",
     "fs": "^0.0.1-security",
-    "html-react-parser": "^3.0.4",
-    "isomorphic-dompurify": "^0.24.0",
-    "katex": "^0.16.4",
+    "html-react-parser": "^3.0.15",
+    "isomorphic-dompurify": "^1.3.0",
+    "katex": "^0.16.6",
     "lodash": "^4.17.21",
-    "next": "^13.0.7",
-    "prisma": "^4.7.1",
+    "next": "^13.3.0",
+    "prisma": "^4.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-ga": "^3.3.1",
-    "react-ga4": "^1.4.1",
+    "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.41.0",
-    "react-icons": "^4.7.1",
+    "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
     "react-katex": "^3.0.1",
     "react-simple-image-slider": "^2.4.1",
     "react-sticky-el": "^2.0.9",
     "react-table": "^7.8.0",
-    "styled-components": "^5.3.6",
-    "suneditor": "^2.44.3",
-    "suneditor-react": "^3.4.1",
-    "swr": "^2.0.0",
+    "styled-components": "^5.3.9",
+    "suneditor": "^2.44.10",
+    "suneditor-react": "^3.5.0",
+    "swr": "^2.1.3",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@chakra-ui/cli": "^2.2.1",
-    "@next/bundle-analyzer": "^13.0.7",
-    "@types/dompurify": "^2.4.0",
-    "@types/katex": "^0.14.0",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@chakra-ui/cli": "^2.3.0",
+    "@next/bundle-analyzer": "^13.3.0",
+    "@types/dompurify": "^3.0.1",
+    "@types/katex": "^0.16.0",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.6",
     "@types/react-icons": "^3.0.0",
     "@types/react-sticky-el": "^1.0.3",
-    "@types/react-table": "^7.7.12",
+    "@types/react-table": "^7.7.14",
     "@types/styled-components": "^5.1.26",
-    "@types/uuid": "^9.0.0",
+    "@types/uuid": "^9.0.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.30.0",
-    "eslint-config-next": "^13.0.7",
-    "typescript": "^4.9.4"
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
+    "typescript": "^5.0.4"
   }
 }
